Add ssl and secure tcp config

--- a/eventstore.conf
+++ b/eventstore.conf
@@ -4,3 +4,4 @@ IntHttpPrefixes: http://*:2112/
 ExtHttpPrefixes: http://*:2113/
 AddInterfacePrefixes: false
 RunProjections: All
+CertificateFile: eventstore.p12
