--- a/eventstore.conf
+++ b/eventstore.conf
@@ -4,4 +4,7 @@ IntHttpPrefixes: http://*:2112/
 ExtHttpPrefixes: http://*:2113/
 AddInterfacePrefixes: false
 RunProjections: All
-CertificateFile: eventstore.p12
+CertificateFile: /ssl/eventstore.p12
+ExtSecureTcpPort: 1115
+SslTargetHost: "escluster.net"
+SslValidateServer: False
